[gd_scene load_steps=2 format=2]

[ext_resource path="res://autoloads/network-manager/network-manager.gd" type="Script" id=1]

[node name="NetworkManager" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="HTTPRequestScan" type="HTTPRequest" parent="."]

[node name="HTTPRequestInsert" type="HTTPRequest" parent="."]

[connection signal="request_completed" from="HTTPRequestScan" to="." method="_on_HTTPRequestScan_request_completed"]
[connection signal="request_completed" from="HTTPRequestInsert" to="." method="_on_HTTPRequestInsert_request_completed"]
